# crates

./: .gitignore
bytes_demo/: Cargo.toml
bytes_demo/examples/: demo.rs
bytes_demo/src/: main.rs
channel_demo/: Cargo.toml
channel_demo/src/: main.rs
clap_demo/: Cargo.toml
clap_demo/src/: main.rs
con_utils/: Cargo.toml
con_utils/src/: channel.rs
condvar_demo/src/: main.rs
criterion_demo/: Cargo.toml
criterion_demo/benches/: fib_bench.rs  multi_in_one.rs  my_benchmark.rs  performance_bench.rs  with_input.rs
html2md/: Cargo.toml
httpie/: Cargo.toml
httpie/src/: commands.rs  main.rs
kv/: Cargo.toml
kv/examples/: gen_cert.rs  server.rs  server_with_codec.rs  server_with_sled.rs
kv/fixtures/: ca.cert  ca.key  client.cert  client.key  server.cert  server.key
kv/src/: error.rs  lib.rs
kv/src/network/: frame.rs  mod.rs  stream.rs
kv/src/pb/: mod.rs
kv/src/service/: command_service.rs  mod.rs
kv/src/storage/: memory.rs  mod.rs  sleddb.rs
mytest/: Cargo.toml
mytest/benches/: fib_bench.rs  my_benchmark.rs  performance_bench.rs
mytest/examples/: bytes_demo.rs  tokio_default.rs  yamux_server.rs
mytest/src/: cli.rs  lib.rs  main.rs  resp.rs
mytest/src/sub1/: mod.rs  mystruct1.rs
mytest/src/sub2/: mod.rs  mysub2.rs
otel_test/: Cargo.toml
otel_test/src/: main.rs
prost_demo/: Cargo.toml  README.md  build.rs
prost_demo/src/: items.proto  main.rs
prost_demo/src/msg/: mod.rs  msg.proto  my_msg.rs
queryer/: Cargo.toml
queryer/queryer/: Cargo.toml
queryer/queryer/examples/: covid.rs
queryer/queryer/src/: convert.rs  dialect.rs  fetcher.rs  lib.rs
queryer/queryer_py/: Cargo.toml
queryer/queryer_py/examples/: simple.rs
queryer/queryer_py/src/: README.md  lib.rs
rgrep/: Cargo.toml  haha
rgrep/examples/: fs_demo.rs  regex_demo.rs
rgrep/src/: lib.rs  main.rs
sled_demo/: Cargo.toml
sled_demo/src/: main.rs
snazzy/: Cargo.toml  build.rs
snazzy/examples/: demo.rs
snazzy/src/: items.proto  lib.rs  main.rs  snazzy.items.rs  snazzy_items.rs
thumbor/: Cargo.toml  abi.proto
thumbor/src/: main.rs
thumbor/src/engine/: mod.rs  photon.rs
thumbor/src/pb/: abi.rs  mod.rs
tokio_demo/: Cargo.toml
tokio_demo/src/: main.rs
tracing_demo/: Cargo.toml  README.md
tracing_demo/examples/: basic.rs  otel_jaeger.rs  otlp_jaeger.rs  otlp_pure.rs  tracing_otel.rs  tracing_otel_exporter.rs  tracing_otlp.rs
tracing_demo/src/: main.rs
yamux_demo/: Cargo.toml
yamux_demo/examples/: client.rs  server.rs
yamux_demo/src/: main.rs
