[package]
name = "criterion_demo"
version = "0.1.0"
edition = "2024"

[dependencies]


[dev-dependencies]
criterion = "0.5"

# [[bench]]
# name = "fib_bench"
# harness = false

# [[bench]]
# name = "my_benchmark"
# harness = false

# [[bench]]
# name = "performance_bench"
# harness = false

# [[bench]]
# name = "with_input"
# harness = false

[[bench]]
name = "multi_in_one"
harness = false
