[package]
name = "kv"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.9" # 高效处理网络 buffer 的库
prost = "0.10.4" # 处理 protobuf 的代码
tracing = "0.1.41" # 日志处理
thiserror = "2"
dashmap = "6"
http = "1.0"

[dev-dependencies]
anyhow = "1.0.93" # 错误处理
async-prost = "0.4.0" # 支持把 protobuf 封装成 TCP frame
futures = "0.3.31" # 提供 Stream trait
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "io-util", "macros", "net" ] } # 异步网络库
tracing-subscriber = "0.3" # 日志处理

[build-dependencies]
prost-build = "0.10.4" # 编译 protobuf
