[package]
name = "kv"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.9" # 高效处理网络 buffer 的库
prost = "0.10.4" # 处理 protobuf 的代码
tracing = "0.1.41" # 日志处理
thiserror = "2"
dashmap = "6"
http = "1.0"
sled = "0.34"
tempfile = "3"
tokio = { version = "1.41.1", features = [ "full" ] } # 异步网络库
tokio-rustls = "0.22"
rustls-native-certs = "0.5"
futures = "0.3"
flate2 = "1" # gzip 压缩

[dev-dependencies]
anyhow = "1.0.93" # 错误处理
async-prost = "0.4.0" # 支持把 protobuf 封装成 TCP frame
futures = "0.3.31" # 提供 Stream trait
tokio-util = { version = "0.7", features = ["codec"] }
tracing-subscriber = "0.3" # 日志处理
certify = "0.2"

[build-dependencies]
prost-build = "0.10.4" # 编译 protobuf
