[package]
name = "mytest"
version = "0.1.0"
edition = "2021"

# [lib]
# proc_macro = true

[profile.dev]
debug = 2

[dependencies]
# regex = "1.11.1"
# url = "2.5.4"
anyhow = "1.0"
thiserror = "2.0"
bytes = "1.9"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
pin-project = "1.1.8"
yamux = "0.9"
tracing = "0.1.41"
tracing-subscriber = "0.3"
serde = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "performance_bench"
harness = false
