[package]
name = "mytest"
version = "0.1.0"
edition = "2021"

# [lib]
# proc_macro = true

[profile.dev]
debug = 2

[dependencies]
# regex = "1.11.1"
# url = "2.5.4"
# anyhow = "1.0"
# thiserror = "2.0"
# bytes = "1.9"
# tokio = { version = "1", features = ["full"] }
# tokio-util = { version = "0.7", features = ["full"] }
# futures = "0.3"
# pin-project = "1.1.8"
# yamux = "0.9"
# tracing = "0.1.41"
# tracing-subscriber = "0.3"
# serde = "1"
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.19", features = ["rt-tokio"] }
opentelemetry_sdk = "0.20"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-opentelemetry = "0.20"
tracing-subscriber = "0.3"


[dev-dependencies]
criterion = "0.5"
axum = "0.8"

[[bench]]
name = "performance_bench"
harness = false
