[package]
name = "otel_test"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.29"
opentelemetry = "0.28"
opentelemetry-otlp = { version = "0.28", features = ["http-proto", "grpc-tonic", "http-json"] }
opentelemetry_sdk = "0.28"
opentelemetry-stdout = "0.28"
tokio = { version = "1", features = ["full"] }
